--- a/Jypeli/Jypeli-VS2012.csproj
+++ b/Jypeli/Jypeli-VS2012.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Widgets\BarGauge.cs" />
     <Compile Include="Widgets\Label.cs" />
     <Compile Include="Widgets\MessageDisplay.cs" />
+    <Compile Include="Widgets\PushButton.cs" />
     <Compile Include="WP8\DisplayOrientation.cs" />
     <Compile Include="WP8\DisplayResolution.cs" />
     <Compile Include="WP8\PhoneStub.cs" />
