--- a/Physics2d/Physics2d.csproj
+++ b/Physics2d/Physics2d.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{041D26C6-A261-4843-906E-7326AB1DBA4C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Physics2d</RootNamespace>
-    <AssemblyName>Physics2d</AssemblyName>
+    <RootNamespace>Jypeli.Physics2d</RootNamespace>
+    <AssemblyName>Jypeli.Physics2d</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProductVersion>10.0.0</ProductVersion>
@@ -23,6 +23,7 @@
     <DefineConstants>TRACE;DEBUG;UseDouble</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Jypeli.Physics2d.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
