--- a/SimplePhysics/SimplePhysics-VS2012.csproj
+++ b/SimplePhysics/SimplePhysics-VS2012.csproj
@@ -7,8 +7,8 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7E51D9E3-3B1F-44D5-8376-90253690C95A}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SimplePhysics</RootNamespace>
-    <AssemblyName>SimplePhysics</AssemblyName>
+    <RootNamespace>Jypeli.SimplePhysics</RootNamespace>
+    <AssemblyName>Jypeli.SimplePhysics</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -19,6 +19,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <DocumentationFile>bin\Debug\Jypeli.SimplePhysics.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
