--- a/Projektimallit/VS2012/FysiikkaPeli_SimplePhysics/FysiikkaPeli.csproj
+++ b/Projektimallit/VS2012/FysiikkaPeli_SimplePhysics/FysiikkaPeli.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Reference Include="Jypeli.MonoGame.Framework, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Jypeli, Version=6.0.0.0, Culture=neutral, processorArchitecture=x86" />
-    <Reference Include="Jypeli.SimplePhysics" />
+    <Reference Include="Jypeli.SimplePhysics">
+	  <HintPath>$(registry:HKEY_LOCAL_MACHINE\Software\MonoJypeli@Install_Dir)\Common\Jypeli.SimplePhysics.dll</HintPath>
+	</Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
   </ItemGroup>
